- added mapping qualifier as standard map item field. - fixed problem with javascript calls taking too much time with lots of auto suggest fields on the page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -996,6 +996,7 @@ td.komet-concept-table-nested-indicator.komet-concept-table-nested-indicator-ope
 }
 .komet-mapping-set-definition-row{
     display:flex;
+    margin-bottom: 5px;
 }
 .komet-mapping-set-definition-header{
     margin: 4px;
@@ -1009,7 +1010,7 @@ td.komet-concept-table-nested-indicator.komet-concept-table-nested-indicator-ope
 .komet-mapping-set-definition-item{
     margin: 4px;
     flex: 1 1 50%;
-    height: 70px;
+    min-height: 70px;
 }
 .komet-mapping-set-definition-section > div{
     height: 70px;
